[gd_scene load_steps=5 format=3 uid="uid://cldthpfqw7vgi"]

[ext_resource type="Script" uid="uid://bjmufx2qjqdl8" path="res://Object Pooling/Projectile.gd" id="1_6oe45"]
[ext_resource type="Texture2D" uid="uid://1jhtq0ylsjd" path="res://Sprites/tile_0103.png" id="2_8lpb1"]

[sub_resource type="Curve" id="Curve_ep53o"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.57908, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_h5bym"]
radius = 6.0

[node name="Projectile" type="Area2D"]
script = ExtResource("1_6oe45")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Particle" type="CPUParticles2D" parent="."]
modulate = Color(1, 0.803922, 0, 1)
amount = 50
lifetime = 0.2
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
angle_min = -419.0
angle_max = 277.4
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_ep53o")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_8lpb1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h5bym")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="DestroyTimer" to="." method="end_of_lifetime"]
